--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "initial-demo",
+  "name": "02-pokemon-static",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p ${PORT:=3000}",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "@types/canvas-confetti": "^1.4.3",
+    "axios": "^0.27.2",
+    "canvas-confetti": "^1.5.1",
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.23",
-    "@types/react": "^18.0.21",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "typescript": "^4.8.3"
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "typescript": "4.8.4"
   }
 }
